--- a/src/Shared/Navbar/Navbar.css
+++ b/src/Shared/Navbar/Navbar.css
@@ -21,3 +21,19 @@
     bottom:88%;
     opacity:1;
 }
+
+.board{
+    opacity:0;
+    visibility:hidden;
+    transition:0.8s;
+    transform:translateY(20px);
+}
+.das{
+    transition:0.8s;
+}
+
+.das:hover .board{
+    opacity:1;
+    visibility:visible;
+    transform:translateY(0px);
+}
